Bug 435557 - Wrong dates (2106-02-07) and times after entering rar archives
Summary: Wrong dates (2106-02-07) and times after entering rar archives
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krarc (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-09 20:06 UTC by Toni Asensi Esteve
Modified: 2021-04-24 18:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2021-04-09 20:06:04 UTC
I found a lot of files that had the same date: 7/02/06 ("06" meaning "year 2106") and the same time: 7:28. In more details:
    ls --full-time FILE 
    [...] 2106-02-07 07:28:15.000000000 +0100 FILE

How could it be? Finally, it turned out that if Krusader is used to enter any rar archive, its files are seen with the aforementioned time and date and then uncompressing those files leaves them with that time and date. 


STEPS TO REPRODUCE
Use Krusader to enter a rar file, like:
    - https://defsol.com/ftp/abs/fddev230.rar       (with files from the year 1997)
    - https://es.osdn.net/frs/g_redir.php?m=jaist&f=dockit%2FOldFiles%2Fsample.rar      (with files from 2000 and 2005)
    - https://dubhe.workupload.com/download/zMR4vIPW    (with files from 2015 and 2016)
and see the same (wrong) date and time. Select some of them and copy them in e.g. /tmp. See that they also have a wrong date and time.

EXPECTED RESULTS
The dates and times of the listed files (and the dates and times of the extracted files) should be the original ones.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Kernel Version: 5.4.0-70-generic
Comment 1 Bug Janitor Service 2021-04-09 20:15:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/43
Comment 2 Toni Asensi Esteve 2021-04-24 18:26:06 UTC
Git commit 403827ccf2ae228c5c66be971893023c412f00ed by Toni Asensi Esteve.
Committed on 24/04/2021 at 18:25.
Pushed by asensi into branch 'master'.

Solve the date (2106-02-07) and time problem after entering rar archives

FIXED: [ 435557 ] Wrong dates (2106-02-07) and times after entering rar archives

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/43

M  +1    -4    krArc/krarc.cpp
M  +2    -1    krArc/krarc.h

https://invent.kde.org/utilities/krusader/commit/403827ccf2ae228c5c66be971893023c412f00ed