Solve the date (2106-02-07) and time problem after entering rar archives

FIXED: [ 435557 ] Wrong dates (2106-02-07) and times after entering rar archives
BUG: 435557

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/43